# GravSimulation

./: CMakeLists.txt
src/: Main.cpp  Particle.cpp  Quadtree.cpp  Timer.cpp
src/headers/: HugoStable.h  Particle.h  Quadtree.h  Timer.h
src/resources/: properties.txt
